tests/snapshots/run_wpt_conformance__trtx_batchNormalization_default___elu.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "subgraph.https.any.js",
    "batchNormalization default + elu",
    "trtx",
    "PASS",
)
