tests/snapshots/run_wpt_conformance__trtx_batchNormalization_default___hardSigmoid.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "subgraph.https.any.js",
    "batchNormalization default + hardSigmoid",
    "trtx",
    "PASS",
)
